@@ -17,33 +17,7 @@
 
 #include "common/mm_io.h"
 
-namespace mtx {
-  namespace mm_io {
-    class create_directory_x: public exception {
-    protected:
-      std::string m_path, m_error;
-      int m_error_number;
-    public:
-      create_directory_x(const std::string &path, const std::string &error, int error_number)
-        : m_path(path)
-        , m_error(error)
-        , m_error_number(error_number)
-      {
-      }
-      virtual ~create_directory_x() throw() { }
-
-      virtual const char *what() const throw() {
-        return "create_directory() failed";
-      }
-      virtual std::string error() const throw() {
-        return (boost::format(Y("mkdir(%1%) failed; errno = %2% (%3%)")) % m_path % m_error_number % m_error).str();
-      }
-    };
-  }
-}
-
 int fs_entry_exists(const char *path);
-void create_directory(const char *path);
 int64_t get_current_time_millis();
 std::string get_application_data_folder();
 std::string get_installation_path();
