@@ -1,6 +1,7 @@
-2011-11-27  Moritz Bunkus  <moritz@bunkus.org>
+2011-11-28  Moritz Bunkus  <moritz@bunkus.org>
 
-	* Released v5.1.0.
+	* mkvmerge: bug fix: mkvmerge will no longer create folders on
+	drives it shouldn't create them on on Windows.
 
 2011-11-26  Moritz Bunkus  <moritz@bunkus.org>
 
